# norman

./: .asm-lsp.toml  .ccls  .clang-format  .envrc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig  compile_commands.json  compile_flags.txt  linker.ld  makefile.mk  nlibc.ld  nlibc.pico2w.ld  nlibc.specs  norm_dyn.h  norm_mallogator.h  norm_utils.h  run-arm.sh
docs/: malloc.md
include/: dynamic.h  env.h  errno.h  mem.h  stdarg.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h  utils.h  varg.h
include/machine/rp2350/: addresses.h  registers.h
include/semihost/: calls.h  shdefs.h
include/sys/: cdefs.h  syscall.h  types.h
kern/: Makefile  boot1.S  qemu.ld
kern/boot/: boot.S  test.c
kern/boot/aarch64/: boot.S
kern/core/: kernel.c  kstring.c
kern/include/: hwint.h  kernel.h  kstring.h
kern/include/hw/virt/: uart.h
kern/include/machine/: psci.h  uart.h
kern/lib/: kernel.c  kstring.c  psci.c  uart.c
lib/crt/: Makefile  crt0.h  handlers.h
lib/crt/aarch64/: block.S  crt0.S
lib/crt/arm/: arm-acle-compat.h  arm.h  cortexm.S  crt0.S  crt0.c  crtbegin.c  crti.c  crtn.c  swi.h
lib/libc/: Makefile
lib/libc/semihost/: _exit.c  close.c  exit.c  mapstdio.c  open.c  print.c  read.c  semihost_clock.c  semihost_close.c  semihost_elapsed.c  semihost_errno.c  semihost_exit.c  semihost_feature.c  semihost_flen.c  semihost_get_cmdline.c  semihost_getc.c  semihost_heapinfo.c  semihost_iserror.c  semihost_istty.c  semihost_open.c  semihost_putc.c  semihost_read.c  semihost_remove.c  semihost_rename.c  semihost_seek.c  semihost_system.c  semihost_tickfreq.c  semihost_time.c  semihost_tmpnam.c  semihost_write.c  semihost_write0.c  sys_clock.c  sys_close.c  sys_elapsed.c  sys_errno.c  sys_exit.c  sys_feature.c  sys_flen.c  sys_get_cmdline.c  sys_getc.c  (+16 more)
lib/libc/semihost/aarch64/: semihost.S
lib/libc/semihost/arm/: semihost.S  sys-semihost.S
lib/libc/stdio/: _stdio.c  close.c  fclose.c  fdopen.c  fflush.c  fputc.c  fputs.c  fread.c  fwrite.c  open.c  print.c  read.c  stdio.c  write.c
lib/libc/stdlib/: div.c  dynamic.c  env.c  exit.c  itoa.c  ltoa.c  reverse.c
lib/libc/sys/: errno.c  mallogator.c  mem.c  param.h
lib/libc/sys/aarch64/: syscall.S
lib/libc/sys/arm/: syscall.S
lib/libc/unistd/: _exit.c
src/: Makefile  dynamic.c  dynamic.h  eevee.h  errno.c  errno.h  errors.h  mallogator.c  mallogator.h  mem.c  mem.h  stdio.c  stdio.h  string.c  syscall-amd64.S  syscall-arm64.S  system.c  system.h  utils.c  varg.h
src/crt/: Makefile  crt.c
src/crt/aarch64/: crt.h  crt0.S  crt0.c  crt1.S  crti.S  crti.c  crtn.S  crtn.c
src/crt/common/: crt_common.h  crtbegin.c  crtbrand.S  crtend.c
src/libc/: compiler.h
src/stdio/: stdio.c
src/stdlib/: abs.c  div.c  dynamic.c  exit.c  itoa.c  ldiv.c  ltoa.c  reverse.c
src/string/: string.c
src/sys/: errno.c  mallogator.c  mem.c
src/sys/aarch64/: syscall.S
tests/: calls  demo.c  dyn_simple.c  mem_simple.c  syscalls.c
